# swiss-matching

./: .env.example  .gitignore  Cargo.toml  README.md
fixtures/: create_players.sql  create_tournament.sql  create_user.sql  register_players.sql
migrations/: 20251219002442_create_tables.sql
src/: errors.rs  main.rs  payloads.rs  responses.rs
src/auth/: admin.rs  extractor.rs  hasher.rs  jwt.rs  mod.rs
src/handlers/: auth.rs  mod.rs  players.rs  tournaments.rs
src/models/: tournament.rs
src/repositories/: auth_repo.rs  mod.rs  pairing_repo.rs  player_repo.rs  registration_repo.rs  tournament_repo.rs
src/services/: mod.rs  player_service.rs  tournament_service.rs
