[package]
name = "swiss-matching"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.7"
chrono = "0.4.43"
itertools = "0.14.0"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
password-hash = "0.5.0"
reqwest = "0.13.1"
rustworkx-core = "0.17.1"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio", "derive"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
